# create-gpui-app

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml
src/: dirs.rs  main.rs
src/templates/: default.rs
src/templates/default/: Cargo.toml
src/templates/default/src/: main.rs
src/templates/workspace/: Cargo.toml  README.md
src/templates/workspace/crates/PROJECT_NAME/: Cargo.toml
src/templates/workspace/crates/PROJECT_NAME/src/: main.rs
templates/default/.cargo/: config.toml
templates/default/src/: main.rs
templates/workspace/crates/PROJECT_NAME/src/: main.rs
