[package]
name = "create-gpui-app"
description = "A CLI tool to create a new gpui app."
repository = "https://github.com/zed-industries/create-gpui-app"
authors = [
    "Nate Butler <iamnbutler@gmail.com>",
    "Zed Industries (@zed-industries)",
]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fs_extra = "1.2.0"

[[bin]]
name = "create-gpui-app"
path = "src/main.rs"
